# PlatForm

./: CMakeLists.txt  README.md  test.cpp  test.h
common/: commonfunc.cpp  commonfunc.h
tools/: ImageSourceManager.cpp  ImageSourceManager.h  ToolBasic.cpp  ToolBasic.h  ToolNameLst.cpp  ToolNameLst.h  ToolProducer.cpp  ToolProducer.h  mainapp.cpp  mainapp.h
ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
utility/: utilities.cpp  utilities.h
